# legal-review-env

./: .dockerignore  Dockerfile  README.md  SPACES_README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  quickstart.py
server/: app.py  environment.py  graders.py  requirements.txt  tasks.py
tests/: test_environment.py
